// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/Graph with lines 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "height": "100vh",
        "width": "100%",
      }
    }
  >
    <StyledGraphContainer
      lines={
        Array [
          Object {
            "label": "fontSize",
            "points": Array [
              Array [
                320,
                12,
              ],
              Array [
                540,
                16,
              ],
              Array [
                1280,
                24,
              ],
            ],
          },
          Object {
            "label": "width",
            "points": Array [
              Array [
                320,
                320,
              ],
              Array [
                540,
                480,
              ],
              Array [
                1280,
                1160,
              ],
            ],
          },
          Object {
            "label": "height",
            "points": Array [
              Array [
                320,
                320,
              ],
              Array [
                540,
                405,
              ],
              Array [
                1280,
                652.5,
              ],
            ],
          },
        ]
      }
    />
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <StyledGraphContainer
        lines={
          Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ]
        }
      />,
      "style": Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "height": "100vh",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "lines": Array [
          Object {
            "label": "fontSize",
            "points": Array [
              Array [
                320,
                12,
              ],
              Array [
                540,
                16,
              ],
              Array [
                1280,
                24,
              ],
            ],
          },
          Object {
            "label": "width",
            "points": Array [
              Array [
                320,
                320,
              ],
              Array [
                540,
                480,
              ],
              Array [
                1280,
                1160,
              ],
            ],
          },
          Object {
            "label": "height",
            "points": Array [
              Array [
                320,
                320,
              ],
              Array [
                540,
                405,
              ],
              Array [
                1280,
                652.5,
              ],
            ],
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
        />,
        "style": Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "height": "100vh",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "lines": Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/Graph with lines and theme 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "thickness": 16,
        }
      }
    >
      <StyledGraphContainer
        lines={
          Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ]
        }
      />
    </ThemeProvider>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ThemeProvider
        theme={
          Object {
            "thickness": 16,
          }
        }
      >
        <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
        />
      </ThemeProvider>,
      "style": Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
        />,
        "theme": Object {
          "thickness": 16,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "lines": Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ThemeProvider
          theme={
            Object {
              "thickness": 16,
            }
          }
        >
          <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
          />
        </ThemeProvider>,
        "style": Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "boxSizing": "border-box",
          "height": "100vh",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
          />,
          "theme": Object {
            "thickness": 16,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "lines": Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/Graph with lines and theme and custom bounds 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "thickness": 16,
        }
      }
    >
      <StyledGraphContainer
        lines={
          Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ]
        }
        maxX={1605}
        maxY={1605}
        minX={-1000}
        minY={-1000}
      />
    </ThemeProvider>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ThemeProvider
        theme={
          Object {
            "thickness": 16,
          }
        }
      >
        <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
          maxX={1605}
          maxY={1605}
          minX={-1000}
          minY={-1000}
        />
      </ThemeProvider>,
      "style": Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
          maxX={1605}
          maxY={1605}
          minX={-1000}
          minY={-1000}
        />,
        "theme": Object {
          "thickness": 16,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "lines": Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ],
          "maxX": 1605,
          "maxY": 1605,
          "minX": -1000,
          "minY": -1000,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ThemeProvider
          theme={
            Object {
              "thickness": 16,
            }
          }
        >
          <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
            maxX={1605}
            maxY={1605}
            minX={-1000}
            minY={-1000}
          />
        </ThemeProvider>,
        "style": Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "boxSizing": "border-box",
          "height": "100vh",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
            maxX={1605}
            maxY={1605}
            minX={-1000}
            minY={-1000}
          />,
          "theme": Object {
            "thickness": 16,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "lines": Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ],
            "maxX": 1605,
            "maxY": 1605,
            "minX": -1000,
            "minY": -1000,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`react-graph-editor/Graph with lines and theme and zero point 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "thickness": 16,
        }
      }
    >
      <StyledGraphContainer
        lines={
          Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ]
        }
        minX={0}
        minY={0}
      />
    </ThemeProvider>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ThemeProvider
        theme={
          Object {
            "thickness": 16,
          }
        }
      >
        <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
          minX={0}
          minY={0}
        />
      </ThemeProvider>,
      "style": Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "boxSizing": "border-box",
        "height": "100vh",
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <StyledGraphContainer
          lines={
            Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ]
          }
          minX={0}
          minY={0}
        />,
        "theme": Object {
          "thickness": 16,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "lines": Array [
            Object {
              "label": "fontSize",
              "points": Array [
                Array [
                  320,
                  12,
                ],
                Array [
                  540,
                  16,
                ],
                Array [
                  1280,
                  24,
                ],
              ],
            },
            Object {
              "label": "width",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  480,
                ],
                Array [
                  1280,
                  1160,
                ],
              ],
            },
            Object {
              "label": "height",
              "points": Array [
                Array [
                  320,
                  320,
                ],
                Array [
                  540,
                  405,
                ],
                Array [
                  1280,
                  652.5,
                ],
              ],
            },
          ],
          "minX": 0,
          "minY": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ThemeProvider
          theme={
            Object {
              "thickness": 16,
            }
          }
        >
          <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
            minX={0}
            minY={0}
          />
        </ThemeProvider>,
        "style": Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "boxSizing": "border-box",
          "height": "100vh",
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <StyledGraphContainer
            lines={
              Array [
                Object {
                  "label": "fontSize",
                  "points": Array [
                    Array [
                      320,
                      12,
                    ],
                    Array [
                      540,
                      16,
                    ],
                    Array [
                      1280,
                      24,
                    ],
                  ],
                },
                Object {
                  "label": "width",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      480,
                    ],
                    Array [
                      1280,
                      1160,
                    ],
                  ],
                },
                Object {
                  "label": "height",
                  "points": Array [
                    Array [
                      320,
                      320,
                    ],
                    Array [
                      540,
                      405,
                    ],
                    Array [
                      1280,
                      652.5,
                    ],
                  ],
                },
              ]
            }
            minX={0}
            minY={0}
          />,
          "theme": Object {
            "thickness": 16,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "lines": Array [
              Object {
                "label": "fontSize",
                "points": Array [
                  Array [
                    320,
                    12,
                  ],
                  Array [
                    540,
                    16,
                  ],
                  Array [
                    1280,
                    24,
                  ],
                ],
              },
              Object {
                "label": "width",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    480,
                  ],
                  Array [
                    1280,
                    1160,
                  ],
                ],
              },
              Object {
                "label": "height",
                "points": Array [
                  Array [
                    320,
                    320,
                  ],
                  Array [
                    540,
                    405,
                  ],
                  Array [
                    1280,
                    652.5,
                  ],
                ],
              },
            ],
            "minX": 0,
            "minY": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
